<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Origin Remote</string>
    <string name="ipAddress">请输入ip地址,例:192.168.1.1</string>
    <string name="port">请输入端口号,例:59671</string>
    <string name="sendpoint">是否传输屏幕坐标值</string>
    <string name="sendgyroscope">是否传输陀螺仪数据</string>
    <string name="landscape">固定横屏</string>
    <string name="portrait">固定竖屏</string>
    <string name="output">输出</string>
    <string name="iptitle">IP,端口设置</string>
    <string name="normal">传输设置</string>
    <string name="menu_settings">Settings</string>
    <string name="connecttext">完成并连接</string>
    <string name="touch">来啊点我啊</string>
    <string name="usb">USB连接</string>

</resources>